--- a/assignments/WeatherApp/app/src/main/res/layout/activity_weather.xml
+++ b/assignments/WeatherApp/app/src/main/res/layout/activity_weather.xml
@@ -5,4 +5,41 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationInput"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/asyncSwitch"
+        android:text="Location" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Async"
+        android:id="@+id/asyncSwitch"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/locationInput"
+        android:checked="false" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fetch"
+        android:id="@+id/fetchButton"
+        android:layout_below="@+id/locationInput"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_below="@+id/fetchButton"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="46dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical|center_horizontal" />
+
 </RelativeLayout>
