--- a/assignments/WeatherApp/app/src/main/res/layout/activity_weather.xml
+++ b/assignments/WeatherApp/app/src/main/res/layout/activity_weather.xml
@@ -3,13 +3,14 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/layout">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/locationInput"
-        android:text="Input location"
+        android:hint="Input location"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="42dp"
